# moins-de-neuf

./: .gitignore  CMakeLists.txt  README.md
include/: Card.hpp  Combination.hpp  Fold.hpp  Pile.hpp  Referee.hpp  Strategy.hpp
src/: Card.cpp  Combination.cpp  Fold.cpp  Pile.cpp  Referee.cpp  Strategy.cpp  main.cpp
